[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "math_spec_mapping"
version = "0.0.1"
authors = [
  { name="Sean McOwen", email="Sean@Block.Science" },
]
description = "A library for easy mapping of mathematical specifications."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]